--- a/build-a-movie-front/package.json
+++ b/build-a-movie-front/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.25.1",
+    "react-select": "^5.1.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.27",
+    "autoprefixer": "^10.3.7",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.4.3"
   }
 }
